--- a/html/template/ecommerce.html
+++ b/html/template/ecommerce.html
@@ -276,8 +276,8 @@
                           </div>
                           <ul class="flex flex-col max-h-[232px] overflow-auto custom-scroll px-1">
                             <li class="cart-item flex items-center gap-3 py-3 rtl:first:!pl-0  rtl:last:!pr-0 transition-all duration-300 border-b last:border-b-0 border-border-light dark:border-border-dark rounded-5"><a class="flex items-center gap-[12px]" href="./product.html">
-                                <div class="rounded-full relative "><img class="rounded-full min-w-[2.25rem] min-h-[2.25rem] w-full h-auto object-cover" src="../../assets/images/product/1.jpg" alt="Flower Pot"></div>
-                                <div>
+                                <div class="rounded-full relative"> <img class="rounded-full min-w-[2.25rem] min-h-[2.25rem] w-full h-auto object-cover" src="../../assets/images/product/1.jpg" alt="Flower Pot"></div>
+                                <div> 
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Flower Pot</h4>
                                   <p class="text-xs font-semibold line-clamp-1 text-content ">$25.00</p>
                                 </div></a>
@@ -291,8 +291,8 @@
                               </div>
                             </li>
                             <li class="cart-item flex items-center gap-3 py-3 rtl:first:!pl-0  rtl:last:!pr-0 transition-all duration-300 border-b last:border-b-0 border-border-light dark:border-border-dark rounded-5"><a class="flex items-center gap-[12px]" href="./product.html">
-                                <div class="rounded-full relative "><img class="rounded-full min-w-[2.25rem] min-h-[2.25rem] w-full h-auto object-cover" src="../../assets/images/product/2.jpg" alt="Iphone Max pro"></div>
-                                <div>
+                                <div class="rounded-full relative"> <img class="rounded-full min-w-[2.25rem] min-h-[2.25rem] w-full h-auto object-cover" src="../../assets/images/product/2.jpg" alt="Iphone Max pro"></div>
+                                <div> 
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Iphone Max pro</h4>
                                   <p class="text-xs font-semibold line-clamp-1 text-content ">$35.20</p>
                                 </div></a>
@@ -306,8 +306,8 @@
                               </div>
                             </li>
                             <li class="cart-item flex items-center gap-3 py-3 rtl:first:!pl-0  rtl:last:!pr-0 transition-all duration-300 border-b last:border-b-0 border-border-light dark:border-border-dark rounded-5"><a class="flex items-center gap-[12px]" href="./product.html">
-                                <div class="rounded-full relative "><img class="rounded-full min-w-[2.25rem] min-h-[2.25rem] w-full h-auto object-cover" src="../../assets/images/product/3.jpg" alt="Royal Party Glass"></div>
-                                <div>
+                                <div class="rounded-full relative"> <img class="rounded-full min-w-[2.25rem] min-h-[2.25rem] w-full h-auto object-cover" src="../../assets/images/product/3.jpg" alt="Royal Party Glass"></div>
+                                <div> 
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Royal Party Glass</h4>
                                   <p class="text-xs font-semibold line-clamp-1 text-content ">$45.10</p>
                                 </div></a>
@@ -321,8 +321,8 @@
                               </div>
                             </li>
                             <li class="cart-item flex items-center gap-3 py-3 rtl:first:!pl-0  rtl:last:!pr-0 transition-all duration-300 border-b last:border-b-0 border-border-light dark:border-border-dark rounded-5"><a class="flex items-center gap-[12px]" href="./product.html">
-                                <div class="rounded-full relative "><img class="rounded-full min-w-[2.25rem] min-h-[2.25rem] w-full h-auto object-cover" src="../../assets/images/product/4.jpg" alt="Water Proof Watch"></div>
-                                <div>
+                                <div class="rounded-full relative"> <img class="rounded-full min-w-[2.25rem] min-h-[2.25rem] w-full h-auto object-cover" src="../../assets/images/product/4.jpg" alt="Water Proof Watch"></div>
+                                <div> 
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Water Proof Watch</h4>
                                   <p class="text-xs font-semibold line-clamp-1 text-content ">$12.30</p>
                                 </div></a>
@@ -336,8 +336,8 @@
                               </div>
                             </li>
                             <li class="cart-item flex items-center gap-3 py-3 rtl:first:!pl-0  rtl:last:!pr-0 transition-all duration-300 border-b last:border-b-0 border-border-light dark:border-border-dark rounded-5"><a class="flex items-center gap-[12px]" href="./product.html">
-                                <div class="rounded-full relative "><img class="rounded-full min-w-[2.25rem] min-h-[2.25rem] w-full h-auto object-cover" src="../../assets/images/product/5.jpg" alt="Traveling Duffle Bag"></div>
-                                <div>
+                                <div class="rounded-full relative"> <img class="rounded-full min-w-[2.25rem] min-h-[2.25rem] w-full h-auto object-cover" src="../../assets/images/product/5.jpg" alt="Traveling Duffle Bag"></div>
+                                <div> 
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Traveling Duffle Bag</h4>
                                   <p class="text-xs font-semibold line-clamp-1 text-content ">$32.10</p>
                                 </div></a>
@@ -1024,7 +1024,7 @@
                   <div class="card svg-shake gap-0 p-0">
                     <div class="grid grid-cols-12 p-4">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
-                        <div class="flex items-center gap-[9px]">
+                        <div class="flex items-center gap-[9px] 2xl:flex-col 2xl:items-start ">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-success opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-success 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
@@ -1032,8 +1032,8 @@
                             </svg>
                           </div>
                           <div> 
-                            <h5 class="text-base font-bold text-content3">Total Sells</h5>
-                            <h2 class="text-2xl font-extrabold text-title">20.79</h2>
+                            <h5 class="text-base font-bold text-content3 5xl:text-sm  2xl:text-3xs xl:text-base">Total Sells</h5>
+                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-2xl">20.79</h2>
                           </div>
                         </div>
                       </div>
@@ -1049,7 +1049,7 @@
                             <use href="../../assets/svg/sprite.svg#Fill-Arrow"> </use>
                           </svg>
                         </div>
-                        <p class="text-xs font-semibold 3xl:text-2xs text-content"><strong class="text-danger font-semibold">- 36.28%</strong><span class="text-xs text-content3 font-semibold"> Total Sells Compared to last year</span></p>
+                        <p class="text-xs font-semibold 3xl:text-2xs text-content 3xl:flex 3xl:items-center 3xl:gap-2"><strong class="text-danger font-semibold">-36.28% </strong><span class="text-xs text-content3 font-semibold 6xl:line-clamp-1 5xl:line-clamp-1"> Total Sells Compared to last year</span></p>
                       </div>
                     </div>
                   </div>
@@ -1058,7 +1058,7 @@
                   <div class="card svg-shake gap-0 p-0">
                     <div class="grid grid-cols-12 p-4">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
-                        <div class="flex items-center gap-[9px]">
+                        <div class="flex items-center gap-[9px] 2xl:flex-col 2xl:items-start ">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-secondary opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-secondary 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
@@ -1066,8 +1066,8 @@
                             </svg>
                           </div>
                           <div> 
-                            <h5 class="text-base font-bold text-content3">Total Customer</h5>
-                            <h2 class="text-2xl font-extrabold text-title">10.341</h2>
+                            <h5 class="text-base font-bold text-content3 5xl:text-sm  2xl:text-3xs xl:text-base">Total Customer</h5>
+                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-2xl">10.341</h2>
                           </div>
                         </div>
                       </div>
@@ -1083,7 +1083,7 @@
                             <use href="../../assets/svg/sprite.svg#Fill-Arrow"> </use>
                           </svg>
                         </div>
-                        <p class="text-xs font-semibold 3xl:text-2xs text-content"><strong class="text-danger font-semibold">- 26.14%</strong><span class="text-xs text-content3 font-semibold"> Customer Compared to last year</span></p>
+                        <p class="text-xs font-semibold 3xl:text-2xs text-content 3xl:flex 3xl:items-center 3xl:gap-2"><strong class="text-danger font-semibold">-26.14% </strong><span class="text-xs text-content3 font-semibold 6xl:line-clamp-1 5xl:line-clamp-1"> Customer Compared to last year</span></p>
                       </div>
                     </div>
                   </div>
@@ -1092,7 +1092,7 @@
                   <div class="card svg-shake gap-0 p-0">
                     <div class="grid grid-cols-12 p-4">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
-                        <div class="flex items-center gap-[9px]">
+                        <div class="flex items-center gap-[9px] 2xl:flex-col 2xl:items-start ">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-title opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-title 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
@@ -1100,8 +1100,8 @@
                             </svg>
                           </div>
                           <div> 
-                            <h5 class="text-base font-bold text-content3">Total Expenses</h5>
-                            <h2 class="text-2xl font-extrabold text-title">23.28</h2>
+                            <h5 class="text-base font-bold text-content3 5xl:text-sm  2xl:text-3xs xl:text-base">Total Expenses</h5>
+                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-2xl">23.28</h2>
                           </div>
                         </div>
                       </div>
@@ -1117,7 +1117,7 @@
                             <use href="../../assets/svg/sprite.svg#Fill-Arrow"> </use>
                           </svg>
                         </div>
-                        <p class="text-xs font-semibold 3xl:text-2xs text-content"><strong class="text-success font-semibold">+ 67.24%</strong><span class="text-xs text-content3 font-semibold"> Expenses Compared to last year</span></p>
+                        <p class="text-xs font-semibold 3xl:text-2xs text-content 3xl:flex 3xl:items-center 3xl:gap-2"><strong class="text-success font-semibold">+67.24% </strong><span class="text-xs text-content3 font-semibold 6xl:line-clamp-1 5xl:line-clamp-1"> Expenses Compared to last year</span></p>
                       </div>
                     </div>
                   </div>
@@ -1126,7 +1126,7 @@
                   <div class="card svg-shake gap-0 p-0">
                     <div class="grid grid-cols-12 p-4">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
-                        <div class="flex items-center gap-[9px]">
+                        <div class="flex items-center gap-[9px] 2xl:flex-col 2xl:items-start ">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-warning opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-warning 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
@@ -1134,8 +1134,8 @@
                             </svg>
                           </div>
                           <div> 
-                            <h5 class="text-base font-bold text-content3">Total Order</h5>
-                            <h2 class="text-2xl font-extrabold text-title">21.745</h2>
+                            <h5 class="text-base font-bold text-content3 5xl:text-sm  2xl:text-3xs xl:text-base">Total Order</h5>
+                            <h2 class="text-2xl font-extrabold text-title 5xl:text-sm 2xl:text-3xs xl:text-2xl">21.745</h2>
                           </div>
                         </div>
                       </div>
@@ -1153,7 +1153,7 @@
                             <use href="../../assets/svg/sprite.svg#Fill-Arrow"> </use>
                           </svg>
                         </div>
-                        <p class="text-xs font-semibold 3xl:text-2xs text-content"><strong class="text-danger font-semibold">- 12.13%</strong><span class="text-xs text-content3 font-semibold"> Order Compared to last year</span></p>
+                        <p class="text-xs font-semibold 3xl:text-2xs text-content 3xl:flex 3xl:items-center 3xl:gap-2"><strong class="text-danger font-semibold">-12.13% </strong><span class="text-xs text-content3 font-semibold 6xl:line-clamp-1 5xl:line-clamp-1"> Order Compared to last year</span></p>
                       </div>
                     </div>
                   </div>
